fixed image alignment

--- a/assignment-8/css/style.css
+++ b/assignment-8/css/style.css
@@ -1,5 +1,12 @@
 .instagram {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+
+    margin-left: 50%;
+
+}
+.youtube {
+    display: block;
+    margin-top: -90px;
+    margin-left: 100%;
+
 }
